--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -8,6 +8,7 @@
 {% block page_description %}{{ translate("WELCOME_TO", {'title': site.title}) }}{% endblock %}
 
 {% block content %}
+    <script>alert("{{ current_user.theme }}")</script>
     <div class="main">
         <div class="MainTabWindows">
 
