--- a/main/app/sprinkles/core/assets/SiteAssets/css/main.css
+++ b/main/app/sprinkles/core/assets/SiteAssets/css/main.css
@@ -28,8 +28,6 @@ html, body {
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background-color: #fdfeff;
-    color: #426A91;
     margin: 0;
     padding: 0;
     border: 0;
@@ -37,7 +35,6 @@ html, body {
 
 a {
     text-decoration: none;
-    color: #4a93c0;
 }
 
 hr {
@@ -45,7 +42,6 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #e7e7e7;
     margin: 1em 0;
     padding: 0;
 }
@@ -66,14 +62,9 @@ hr.ShorterLine {
 /*******
 SWIPEABLE
 *******/
-.main-carousel {
-    background: #EEE;
-}
-
 .carousel-cell {
     width: 100%;
     height: 100%;
-    background: #FDFEFF;
     counter-increment: carousel-cell;
 }
 
@@ -96,21 +87,11 @@ HEADER
 .LeftButtonHeader {
     width: 20px;
     height: 20px;
-    filter: invert(.5);
-    -webkit-filter: invert(.5);
-    -moz-filter: invert(.5);
-}
-
-.HeaderCaption {
-    color: #888888;
 }
 
 .RightButtonHeader {
     width: 20px;
     height: 20px;
-    filter: invert(.5);
-    -webkit-filter: invert(.5);
-    -moz-filter: invert(.5);
 }
 
 /***********
@@ -171,8 +152,6 @@ EXPLORE WINDOW
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
-    color: #f3f4f5;
-    background-color: #c8c9ca;
 }
 
 .SearchResults {
@@ -232,8 +211,6 @@ hr.ChatHeaderDivider {
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
-    background: linear-gradient(to right, #ad4eff, #7c41f9);
-    color: #FFF;
     font-size: x-small;
     animation: fadeIn 1s;
     -webkit-animation: fadeIn 1s;
@@ -251,6 +228,10 @@ hr.ChatHeaderDivider {
     padding: 8px;
     margin-bottom: 5px;
     font-size: 0.85em;
+    -moz-transition: all .7s;
+    -o-transition: all .7s;
+    -webkit-transition: all .7s;
+    transition: all .7s;
 }
 
 .MessageWrapper {
@@ -260,22 +241,16 @@ hr.ChatHeaderDivider {
 
 .TypingIndicatorMessage {
     border-radius: 25px;
-    background-color: #DFDFDF;
-    color: #a7a8a9;
 }
 
 .MessageSent {
     clear: right;
     float: right;
-    background-color: #376cf4;
-    color: #efefef;
 }
 
 .MessageReceived {
     clear: left;
     float: left;
-    background-color: #dfdfdf;
-    color: #6a6b6c;
 }
 
 .AloneMessage {
@@ -315,8 +290,6 @@ hr.ChatHeaderDivider {
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
-    color: #393a3b;
-    background-color: #c8c9ca;
 }
 
 #ChatTextInput {
@@ -332,7 +305,6 @@ hr.ChatHeaderDivider {
 .spinner > div {
     width: 10px;
     height: 10px;
-    background-color: #98999a;
 
     border-radius: 100%;
     display: inline-block;
@@ -388,14 +360,9 @@ PERSONAL TAB
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
-    color: white;
     font-size: 25px;
     line-height: 50px;
     text-align: center;
-}
-
-.GenderFab.Female {
-    background: linear-gradient(to right, #ff7a88, #ff9676);
 }
 
 .AvatarImage {
@@ -404,10 +371,6 @@ PERSONAL TAB
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
-}
-
-.GenderFab.Male {
-    background: linear-gradient(to right, #11c1d5, #1ddcb6);
 }
 
 .DisplayNames {
@@ -433,7 +396,6 @@ NAVBAR
     left: 0;
     height: 75px;
     width: 100%;
-    background-color: #e4e4e4;
 }
 
 .NavbarIconWrap {
@@ -451,6 +413,5 @@ NAVBAR
     left: 0;
     width: 20% !important;
     height: 2px;
-    background: #eb12b5;
 }
 
