--- a/main/app/sprinkles/core/assets/SiteAssets/css/main.css
+++ b/main/app/sprinkles/core/assets/SiteAssets/css/main.css
@@ -400,7 +400,7 @@ PERSONAL TAB
     text-align: center;
 }
 
-.AvatarImage {
+.PersonalOverviewHeader .Avatar {
     height: 110px;
     width: 110px;
     -webkit-border-radius: 100%;
