Began chat encrpytion integration and ECC key generation on registration

--- a/main/app/sprinkles/core/assets/SiteAssets/css/main.css
+++ b/main/app/sprinkles/core/assets/SiteAssets/css/main.css
@@ -193,6 +193,7 @@ hr.ChatHeaderDivider {
 
 .ChatMessages {
     overflow-y: scroll;
+    overflow-x: hidden;
     max-height: calc(100% - 215px); /* navbar + input + some margin*/
     max-height: -moz-calc(100% - 215px);
     max-height: -webkit-calc(100% - 215px);
