--- a/main/app/sprinkles/account/templates/pages/sign-in.html.twig
+++ b/main/app/sprinkles/account/templates/pages/sign-in.html.twig
@@ -62,6 +62,7 @@
 {% endblock %}
 
 {% block scripts_page %}
+    <script>var current_user_id = {{ current_user.id }};</script>
     <!-- Include validation rules -->
     <script>
         {% include "pages/partials/page.js.twig" %}
