--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -23,8 +23,7 @@
                 </div>
                 <div class="MainInTab FeedTabWindow">
                     {% for FeedImage in FeedImages %}
-                        <img class="FeedImage" src="{{ site.uri.public }}/image/{{ FeedImage.PostID }}"
-                             alt="You probably don't have a permission to see this image.">
+                        <img class="FeedImage" src="{{ site.uri.public }}/image/{{ FeedImage.PostID }}">
                         <br>
                     {% endfor %}
                 </div>
@@ -66,10 +65,12 @@
                 </div>
                 <div class="MainInTab ChatWindow">
                     <div class="SelectReceiver"></div>
-                    <div class="SelectedReceiver">
+                    <div class="SelectedReceiver"> {# TODO: Different chat windows for each user(name) #}
+                        {#
                         <div id="ChatMessages" class="ChatMessages" data-username="">
                             <!-- Messages -->
                         </div>
+                        #}
                         <input title="{{ translate("CHAT_MESSAGES.WRITE_MESSAGE_PH") }}"
                                placeholder="{{ translate("CHAT_MESSAGES.WRITE_MESSAGE_PH") }}"
                                id="ChatTextInput" class="ChatInput" type="text" />
